--- a/index.html
+++ b/index.html
@@ -114,35 +114,37 @@
             <div class="content-wrapper">
                 <a href="#" class="totop"><i class="fa fa-chevron-up"></i></a>
                 <div class="container-fluid top-slider">
-                    <div id="myslider" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <ul class="carousel-indicators">
-                            <li data-bs-target="#myslider" data-bs-slide-to="0" class="active"></li>
-                            <li data-bs-target="#myslider" data-bs-slide-to="1"></li>
-                            <li data-bs-target="#myslider" data-bs-slide-to="2"></li>
-                        </ul>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <a href="#"><img src="images/Slide-1.png" alt=""></a>
-                                <div class="carousel-caption">
+                    <div class="container">
+                        <div id="myslider" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                            <ul class="carousel-indicators">
+                                <li data-bs-target="#myslider" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#myslider" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#myslider" data-bs-slide-to="2"></li>
+                            </ul>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <a href="#"><img src="images/Slide-1.png" alt=""></a>
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="#"><img src="images/Slide-2.png" alt=""></a>
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="#"><img src="images/Slide-3.png" alt=""></a>
+                                    <div class="carousel-caption">
+                                    </div>
                                 </div>
                             </div>
-                            <div class="carousel-item">
-                                <a href="#"><img src="images/Slide-2.png" alt=""></a>
-                                <div class="carousel-caption">
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="#"><img src="images/Slide-3.png" alt=""></a>
-                                <div class="carousel-caption">
-                                </div>
-                            </div>
+                            <a href="#myslider" class="carousel-control-prev" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </a>
+                            <a href="#myslider" class="carousel-control-next" data-bs-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </a>
                         </div>
-                        <a href="#myslider" class="carousel-control-prev" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
-                        <a href="#myslider" class="carousel-control-next" data-bs-slide="next">
-                            <span class="carousel-control-next-icon"></span>
-                        </a>
                     </div>
                 </div>
                 <div class="promotion">
