--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="container" style="padding-left: 0px">
                         <div id="menu">
                             <ul>
-                                <li><a href="index.html" class="active">Home</a></li>
+                                <li style="margin-left: 0px !important;"><a href="index.html"  class="active">Home</a></li>
                                 <li><a href="about-us.html">Introduce</a></li>
                                 <li id="product"><a href="product.html">Product <i class="fa fa-angle-down"></i></a>
                                     <ul class="product-menu-dropdown">
