--- a/login.html
+++ b/login.html
@@ -133,12 +133,12 @@
             <div class="brand">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-2"><img src="images/brand1.jpg" alt="" height="80px"></div>
-                        <div class="col-lg-2"><img src="images/brand1.jpg" alt="" height="80px"></div>
-                        <div class="col-lg-2"><img src="images/brand1.jpg" alt="" height="80px"></div>
-                        <div class="col-lg-2"><img src="images/brand1.jpg" alt="" height="80px"></div>
-                        <div class="col-lg-2"><img src="images/brand1.jpg" alt="" height="80px"></div>
-                        <div class="col-lg-2"><img src="images/brand1.jpg" alt="" height="80px"></div>
+                        <div class="col-lg-2"><img src="images/philips086473574.jpg" alt="" height="40px"></div>
+                        <div class="col-lg-2"><img src="images/Panasonic873768367.jpg" alt="" height="40px"></div>
+                        <div class="col-lg-2"><img src="images/Mennekes520246502.jpg" alt="" height="40px"></div>
+                        <div class="col-lg-2"><img src="images/Cadivi847106821.jpg" alt="" height="40px"></div>
+                        <div class="col-lg-2"><img src="images/Paragon760064346.jpg" alt="" height="40px"></div>
+                        <div class="col-lg-2"><img src="images/SchneiderElectric412485467.jpg" alt="" height="40px"></div>
                     </div>
                 </div>
             </div>
